--- a/templates/pupil_crud/new.html.twig
+++ b/templates/pupil_crud/new.html.twig
@@ -8,7 +8,7 @@
                     <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
                         <div>
                             <h1>Person erstellen</h1>
-                            <h3>Datensatz anlegen</h3>
+                            <h3 class="color-fg-accent">Datensatz anlegen</h3>
                         </div>
                         <div class="BtnGroup d-none d-lg-block">
                             <a href="#" class="BtnGroup-item btn"><i class="cil-print"></i></a>
