--- a/templates/teacher_crud/index.html.twig
+++ b/templates/teacher_crud/index.html.twig
@@ -1,83 +1,44 @@
-{% extends '_admin.html.twig' %}
+{% extends '_setup.html.twig' %}
 
 {% block title %}Lehrkräfte - Übersicht{% endblock %}
 
-{% block sidebar %}
-    <div class="p-3">
-        <h4>Entitäten</h4>
+{% block page_header %}
+    <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
+        <div>
+            <h1>Lehrkräfte / Tutorium</h1>
+            <h3 class="color-fg-accent">Systemkonfiguration</h3>
+        </div>
+        <a href="{{ path('app_teacher_crud_new') }}" class="btn btn-outline mb-5">Neuer Datensatz</a>
     </div>
 
-    <div class="SideNav">
-        <a href="{{ url('app_user_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-user SideNav-icon"></i>
-            Benutzerkonten
-        </a>
-        <a href="{{ url('app_teacher_crud_index') }}" class="SideNav-item" aria-current="true">
-            <i class="cil cil-school SideNav-icon"></i>
-            Lehrkräfte
-        </a>
-        <a href="{{ url('app_grade_index') }}" class="SideNav-item">
-            <i class="cil cil-excerpt SideNav-icon"></i>
-            Punktetabellen
-        </a>
-    </div>
+    <table class="compact hovering" id="example">
+        <thead>
+        <tr>
+            <th>Nachname</th>
+            <th>Vorname</th>
+            <th class="text-right">Lernende</th>
+            <th class="text-right">Aktion</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for teacher in teachers %}
+            <tr>
+                <th scope="row" class="text-left">{{ teacher.lastname }}</th>
+                <td>{{ teacher.firstname }}</td>
+                <td class="text-right">{{ teacher.pupils.count }}</td>
+                <td class="d-flex flex-justify-end">
+                    {{ include('teacher_crud/_action_form.html.twig') }}
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="4">Keine Einträge vorhanden.</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
 
-{% block body %}
-    <div class="PageLayout">
-        <div class="clearfix gutter">
-            <div class="col-12 float-left">
-                <div class="PageLayout-header mb-5">
-                    <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
-                        <div>
-                            <h1>Lehrkräfte / Tutorium</h1>
-                            <h3>Systemkonfiguration</h3>
-                        </div>
-                    </div>
-                    <a href="{{ path('app_teacher_crud_new') }}" class="btn btn-outline mb-5">Neuer Datensatz</a>
-                    <table class="compact hovering" id="example">
-                        <caption class="my-3">Für Tutorien einsetzbare Lehrkräfte</caption>
-                        <thead>
-                        <tr>
-                            <th>Nachname</th>
-                            <th>Vorname</th>
-                            <th class="text-right">Lernende</th>
-                            <th class="text-right">Aktion</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for teacher in teachers %}
-                            <tr>
-                                <td>{{ teacher.lastname }}</td>
-                                <td>{{ teacher.firstname }}</td>
-                                <td class="text-right">{{ teacher.pupils.count }}</td>
-                                <td class="text-right">
-                                    <a href="{{ path('app_teacher_crud_show', {'id': teacher.id}) }}">anzeigen</a>
-                                    <a href="{{ path('app_teacher_crud_edit', {'id': teacher.id}) }}">bearbeiten</a>
-                                    {{ include('teacher_crud/_delete_form.html.twig') }}
-                                </td>
-                            </tr>
-                        {% else %}
-                            <tr>
-                                <td colspan="4">Keine Einträge vorhanden.</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-12 col-lg-7 float-left">
-                <div class="PageLayout-content">
-                    <a href="{{ path('app_teacher_crud_new') }}" class="btn btn-outline">Neuer Datensatz</a>
-                </div>
-            </div>
-            <div class="col-12 col-lg-5 float-left">
-                <div class="PageLayout-pane">
-
-                </div>
-            </div>
-            <div class="col-12 float-left">
-            </div>
-        </div>
-    </div>
+{% block page_content %}
+    <a href="{{ path('app_teacher_crud_new') }}" class="btn btn-outline">Neuer Datensatz</a>
 {% endblock %}
