--- a/templates/user_crud/_form.html.twig
+++ b/templates/user_crud/_form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form,{'attr':{'class':'needs-validation','novalidate':'novaldiate'}}) }}
 
-<h4 class="border-bottom mt-5">Persönliche Daten</h4>
+<h4 class="border-bottom">Persönliche Daten</h4>
 
 <div class="form-group">
     <div class="form-group-header">
