--- a/templates/app/setup.html.twig
+++ b/templates/app/setup.html.twig
@@ -1,53 +1,17 @@
-{% extends '_admin.html.twig' %}
+{% extends '_setup.html.twig' %}
 
 {% block title %}Teacher index{% endblock %}
 
-{% block sidebar %}
-    <div class="p-3">
-        <h4>Entitäten</h4>
-    </div>
-
-    <div class="SideNav">
-        <a href="{{ url('app_user_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-user SideNav-icon"></i>
-            Benutzerkonten
-        </a>
-        <a href="{{ url('app_teacher_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-school SideNav-icon"></i>
-            Lehrkräfte
-        </a>
-        <a href="{{ url('app_grade_index') }}" class="SideNav-item">
-            <i class="cil cil-excerpt SideNav-icon"></i>
-            Punktetabellen
-        </a>
-    </div>
-{% endblock %}
-
-{% block body %}
-    <div class="PageLayout">
-        <div class="clearfix gutter">
-            <div class="col-12 float-left">
-                <div class="PageLayout-header mb-5">
-                    <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
-                        <div>
-                            <h1>Einstellungen</h1>
-                            <h3>Systemkonfiguration</h3>
-                        </div>
-                    </div>
-                    <p>Richten Sie die Datenbasis für die tägliche Arbeit ein, fügen Sie Benutzerkonten hinzu und setzen Sie Prüfungsfächer und Punktetabellen auf.</p>
-                </div>
-            </div>
-            <div class="col-12 col-lg-7 float-left">
-                <div class="PageLayout-content">
-                </div>
-            </div>
-            <div class="col-12 col-lg-5 float-left">
-                <div class="PageLayout-pane">
-
-                </div>
-            </div>
-            <div class="col-12 float-left">
-            </div>
+{% block page_header %}
+    <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
+        <div>
+            <h1>Einstellungen</h1>
+            <h3>Systemkonfiguration</h3>
         </div>
     </div>
+    <p>Richten Sie die Datenbasis für die tägliche Arbeit ein, fügen Sie Benutzerkonten hinzu und setzen Sie Prüfungsfächer und Punktetabellen auf.</p>
+{% endblock %}
+
+{% block page_content %}
+
 {% endblock %}
