--- a/templates/exam_subject_crud/_form.html.twig
+++ b/templates/exam_subject_crud/_form.html.twig
@@ -2,18 +2,24 @@
 
 <div class="form-group">
     <div class="form-group-header">
-        {{ form_label(form.plainPassword.pass,form.plainPassword.pass,{'label_attr': {'class':'required'} }) }}
-    </div>
-    <div class="form-group-body mb-3">
-        {{ form_widget(form.plainPassword.pass,{'attr': {'class':'form-control width-full'} }) }}
-        <div class="invalid-feedback color-fg-danger my-2">
-            Bitte Passwort des Benutzerkontos angeben.
-        </div>
+        {{ form_label(form.label) }}
     </div>
     <div class="form-group-body">
-        {{ form_widget(form.plainPassword.repeat,{'attr': {'class':'form-control width-full'} }) }}
+        {{ form_widget(form.label) }}
         <div class="invalid-feedback color-fg-danger my-2">
-            Bitte Passwort wiederholen.
+            Bitte Bezeichnung des Prüfungsfachs angeben.
+        </div>
+    </div>
+</div>
+
+<div class="form-group">
+    <div class="form-group-header">
+        {{ form_label(form.abbreviation) }}
+    </div>
+    <div class="form-group-body">
+        {{ form_widget(form.abbreviation) }}
+        <div class="invalid-feedback color-fg-danger my-2">
+            Bitte Kürzel des Prüfungsfachs angeben.
         </div>
     </div>
 </div>
@@ -21,7 +27,7 @@
 <div class="form-group mt-5">
     <div class="form-group-body">
         <button class="btn btn-outline mr-2">{{ button_label|default('Speichern') }}</button>
-        <a class="btn" href="{{ path('app_user_crud_index') }}">Zurück zur Übersicht</a>
+        <a class="btn" href="{{ path('app_exam_subject_crud_index') }}">Zurück zur Übersicht</a>
     </div>
 </div>
 
