--- a/templates/grade/index.html.twig
+++ b/templates/grade/index.html.twig
@@ -1,82 +1,43 @@
-{% extends '_admin.html.twig' %}
+{% extends '_setup.html.twig' %}
 
 {% block title %}Grade index{% endblock %}
 
-{% block sidebar %}
-    <div class="p-3">
-        <h4>Entitäten</h4>
+{% block page_header %}
+    <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
+        <div>
+            <h1>Punktetabellen</h1>
+            <h3 class="color-fg-accent">Systemkonfiguration</h3>
+        </div>
+        <a href="{{ path('app_grade_new') }}" class="btn btn-outline mb-5">Neuer Datensatz</a>
     </div>
-
-    <div class="SideNav">
-        <a href="{{ url('app_user_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-user SideNav-icon"></i>
-            Benutzerkonten
-        </a>
-        <a href="{{ url('app_teacher_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-school SideNav-icon"></i>
-            Lehrkräfte
-        </a>
-        <a href="{{ url('app_grade_index') }}" class="SideNav-item" aria-current="true">
-            <i class="cil cil-excerpt SideNav-icon"></i>
-            Punktetabellen
-        </a>
-    </div>
+    <table class="compact hovering" id="example">
+        <thead>
+        <tr>
+            <th class="text-right">{{ 'Grade'|trans }}</th>
+            <th class="text-right">{{ 'Min'|trans }}</th>
+            <th class="text-right">{{ 'Max'|trans }}</th>
+            <th class="text-right">{{ 'Actions'|trans }}</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for grade in grades %}
+            <tr>
+                <td class="text-right">{{ grade.grade }}</td>
+                <td class="text-right">{{ grade.min }}</td>
+                <td class="text-right">{{ grade.max }}</td>
+                <td class="d-flex flex-justify-end">
+                    {{ include('grade/_action_form.html.twig') }}
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="5">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
 
-{% block body %}
-    <div class="PageLayout">
-        <div class="clearfix gutter">
-            <div class="col-12 float-left">
-                <div class="PageLayout-header mb-5">
-                    <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
-                        <div>
-                            <h1>Punktetabellen</h1>
-                            <h3>Systemkonfiguration</h3>
-                        </div>
-                    </div>
-                    <a href="{{ path('app_grade_new') }}" class="btn btn-outline mb-5">Neuer Datensatz</a>
-                    <table class="compact hovering" id="example">
-                        <caption class="my-3">Endnote und dafür notwendige Notenpunkte</caption>
-                        <thead>
-                        <tr>
-                            <th class="text-right">{{ 'Grade'|trans }}</th>
-                            <th class="text-right">{{ 'Min'|trans }}</th>
-                            <th class="text-right">{{ 'Max'|trans }}</th>
-                            <th class="text-right">{{ 'Actions'|trans }}</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for grade in grades %}
-                            <tr>
-                                <td class="text-right">{{ grade.grade }}</td>
-                                <td class="text-right">{{ grade.min }}</td>
-                                <td class="text-right">{{ grade.max }}</td>
-                                <td class="text-right">
-                                    <a href="{{ path('app_grade_show', {'id': grade.id}) }}">show</a>
-                                    <a href="{{ path('app_grade_edit', {'id': grade.id}) }}">edit</a>
-                                </td>
-                            </tr>
-                        {% else %}
-                            <tr>
-                                <td colspan="5">no records found</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-12 col-lg-7 float-left">
-                <div class="PageLayout-content">
-                    <a href="{{ path('app_grade_new') }}" class="btn btn-outline">Neuer Datensatz</a>
-                </div>
-            </div>
-            <div class="col-12 col-lg-5 float-left">
-                <div class="PageLayout-pane">
-
-                </div>
-            </div>
-            <div class="col-12 float-left">
-            </div>
-        </div>
-    </div>
+{% block page_content %}
+    <a href="{{ path('app_grade_new') }}" class="btn btn-outline">Neuer Datensatz</a>
 {% endblock %}
