--- a/templates/grade/show.html.twig
+++ b/templates/grade/show.html.twig
@@ -1,29 +1,8 @@
-{% extends '_admin.html.twig' %}
+{% extends '_setup.html.twig' %}
 
 {% block title %}Grade{% endblock %}
 
-{% block sidebar %}
-    <div class="p-3">
-        <h4>Entitäten</h4>
-    </div>
-
-    <div class="SideNav">
-        <a href="{{ url('app_user_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-user SideNav-icon"></i>
-            Benutzerkonten
-        </a>
-        <a href="{{ url('app_teacher_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-school SideNav-icon"></i>
-            Lehrkräfte
-        </a>
-        <a href="{{ url('app_grade_index') }}" class="SideNav-item" aria-current="true">
-            <i class="cil cil-excerpt SideNav-icon"></i>
-            Punktetabellen
-        </a>
-    </div>
-{% endblock %}
-
-{% block body %}
+{% block page_header %}
     <h1>Grade</h1>
 
     <table class="compact hovering" id="example">
@@ -57,5 +36,5 @@
 
     <a href="{{ path('app_grade_edit', {'id': grade.id}) }}">edit</a>
 
-    {{ include('grade/_delete_form.html.twig') }}
+    {{ include('grade/_action_form.html.twig') }}
 {% endblock %}
