update entities and layout

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,6 +3,7 @@
 @import "~@coreui/icons/css/free.min.css";
 @import "~datatables.net-dt/css/jquery.dataTables.min.css";
 @import "~bootstrap-icons";
+@import "style.css";
 
 
 
