--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -15,7 +15,7 @@
             </div>
             <div class="col-12 col-lg-7 float-left">
                 <div class="PageLayout-content">
-
+                    <p>Diese Seite ist öffentlich und kann zur Berechnung von Zusatzprüfungen <b>ohne</b> Eingabe personenbezogener Daten genutzt werden.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-5 float-left">
