--- a/templates/base/header.html.twig
+++ b/templates/base/header.html.twig
@@ -5,7 +5,7 @@
         </a>
     </div>
     <div class="Header-item">
-        <a href="#" class="Header-link">
+        <a href="{{ url('app_index') }}" class="Header-link">
             Berechnen
         </a>
     </div>
