--- a/templates/teacher_crud/_action_form.html.twig
+++ b/templates/teacher_crud/_action_form.html.twig
@@ -1,7 +1,7 @@
 <div class="BtnGroup-item">
-    <a class="BtnGroup-item btn btn-sm color-fg-sponsors" href="{{ path('app_teacher_crud_show', {'id': teacher.id}) }}"><i class="bi bi-search"></i></a>
-    <a class="BtnGroup-item btn btn-sm color-fg-sponsors" href="{{ path('app_teacher_crud_edit', {'id': teacher.id}) }}"><i class="bi bi-pencil"></i></a>
-    <button form="form" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="bi bi-trash"></i></button>
+    <a class="BtnGroup-item btn btn-sm" href="{{ path('app_teacher_crud_show', {'id': teacher.id}) }}"><i class="icon_folder-open_alt"></i></a>
+    <a class="BtnGroup-item btn btn-sm" href="{{ path('app_teacher_crud_edit', {'id': teacher.id}) }}"><i class="icon_pencil-edit"></i></a>
+    <button form="form" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash_alt"></i></button>
 </div>
 
 
