--- a/templates/user_crud/_action_form.html.twig
+++ b/templates/user_crud/_action_form.html.twig
@@ -1,10 +1,10 @@
 <div class="BtnGroup-item">
-    <a class="BtnGroup-item btn btn-sm color-fg-sponsors" href="{{ path('app_user_crud_edit', {'id': user.id}) }}"><i class="bi bi-pencil"></i></a>
-    <a class="BtnGroup-item btn btn-sm color-fg-attention" href="{{ path('app_user_crud_edit_password', {'id': user.id}) }}"><i class="bi bi-key"></i></a>
+    <a class="BtnGroup-item btn btn-sm" href="{{ path('app_user_crud_edit', {'id': user.id}) }}"><i class="icon_pencil-edit"></i></a>
+    <a class="BtnGroup-item btn btn-sm color-fg-attention" href="{{ path('app_user_crud_edit_password', {'id': user.id}) }}"><i class="icon_lock_alt"></i></a>
     {% if app.user is not same as user %}
-        <button form="form" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="bi bi-trash"></i></button>
+        <button form="form" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash"></i></button>
     {% else %}
-        <button disabled form="form" class="BtnGroup-item btn btn-sm color-fg-muted"><i class="bi bi-trash"></i></button>
+        <button disabled form="form" class="BtnGroup-item btn btn-sm color-fg-muted"><i class="icon_trash"></i></button>
     {% endif %}
 
 </div>
