--- a/templates/teacher_crud/index.html.twig
+++ b/templates/teacher_crud/index.html.twig
@@ -49,4 +49,9 @@
             <i class="icon_pencil-edit mr-2"></i> Neuer Datensatz
         </div>
     </a>
+    <a href="#" class="btn">
+        <div class=" d-flex flex-items-center">
+            <i class="cil cil-cloud-upload mr-2"></i> Aus CSV importieren
+        </div>
+    </a>
 {% endblock %}
