--- a/templates/pupil_crud/add_exam.html.twig
+++ b/templates/pupil_crud/add_exam.html.twig
@@ -1,4 +1,20 @@
-{% extends '_setup.html.twig' %}
+{% extends '_pupil.html.twig' %}
+
+{% block sidebar %}
+    <div class="p-3">
+        <h4>Schnellzugriff</h4>
+    </div>
+    <div class="SideNav mb-3">
+        <a href="{{ url('app_pupil_crud_index') }}" class="SideNav-item">
+            <i class="cil cil-group SideNav-icon"></i>
+            Alle Prüflinge
+        </a>
+        <a href="{{ url('app_pupil_crud_show',{'id': pupil.id}) }}" class="SideNav-item">
+            <i class="cil cil-user SideNav-icon"></i>
+            {{ pupil }}
+        </a>
+    </div>
+{% endblock %}
 
 {% block page_header %}
                     <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
