--- a/templates/pupil_crud/add_exam.html.twig
+++ b/templates/pupil_crud/add_exam.html.twig
@@ -63,7 +63,7 @@
 
     <div class="form-group mt-5">
         <div class="form-group-body">
-            <button type="submit" class="btn btn-outline mr-1"  id="lastname">Speichern</button>
+            <button type="submit" class="btn btn-outline mr-1"  id="lastname">Speichern und weiteren Datensatz einfügen</button>
             <a href="{{ url('app_pupil_crud_show',{'id':pupil.id}) }}"  class="btn">Abbrechen</a>
         </div>
     </div>
