--- a/templates/teacher_crud/_form.html.twig
+++ b/templates/teacher_crud/_form.html.twig
@@ -5,7 +5,7 @@
         {{ form_label(form.firstname,form.firstname,{'label_attr': {'class':'required'} }) }}
     </div>
     <div class="form-group-body">
-        {{ form_widget(form.firstname,{'attr': {'class':'form-control width-full'} }) }}
+        {{ form_widget(form.firstname,{'attr': {'class':'form-control width-full','autofocus' : 'autofocus'} }) }}
         <div class="invalid-feedback color-fg-danger my-2">
             Bitte Vornamen der Lehrkraft angeben.
         </div>
