--- a/templates/pupil_crud/index.html.twig
+++ b/templates/pupil_crud/index.html.twig
@@ -26,6 +26,8 @@
                             <th class=" text-right">Abschlussjahr</th>
                             <th class=" text-left">Tutorium</th>
                             <th class=" text-right">Kursblock</th>
+                            <th class=" text-right">Prüfungen</th>
+                            <th class=" text-right">Gesamt</th>
                             <th class=" text-right">Aktion</th>
                         </tr>
                         </thead>
@@ -42,6 +44,12 @@
                             <td class="text-right">{{ pupil.examDate|date('Y') }}</td>
                             <td class="">{{ pupil.teacher|default('') }}</td>
                             <td class="text-right">{{ pupil.qualificationPoints|default('') }}</td>
+                            {% set sum = 0 %}
+                            {% for exam in pupil.exams %}
+                                {% set sum = sum + exam.examPoints %}
+                            {% endfor %}
+                            <td class="text-right">{{ sum * 4 }}</td>
+                            <td class="text-right">{{ sum * 4 + pupil.qualificationPoints }}</td>
                             <td class="d-flex flex-justify-end">
                                 <div class="BtnGroup-item">
                                     <a class="BtnGroup-item btn btn-sm" href="{{ path('app_pupil_crud_show', {'id': pupil.id}) }}"><i class="icon_folder-open_alt"></i></a>
