--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,8 @@
         {% endblock %}
     </head>
     <body>
-        <div class="AppFrame-main pb-5" style="height: 100%">
+
+    <div class="AppFrame-main pb-5" style="height: 100%">
             <div class="AppFrame-header-wrapper">
                 <div class="AppFrame-header color-bg-emphasis color-fg-on-emphasis">
                     {% block header %}
@@ -40,6 +41,36 @@
                 <div class="Layout Layout--sidebar-wide" style="height: 100%">
                     <div class="Layout-main">
                         <div class="pb-12 px-3 pl-md-0 pr-md-5 mt-2">
+
+                            <div class="Toast Toast--success" id="toast" style="position: fixed; left: 50%; top: 3rem; z-index: 12000; transform: translate(-50%, -50%);">
+                                <span class="Toast-icon">
+                                    <svg width="12" height="16"
+                                         viewBox="0 0 12 16"
+                                         class="octicon octicon-check"
+                                         aria-hidden="true">
+                                        <path fill-rule="evenodd"
+                                              d="M12 5l-8 8-4-4 1.5-1.5L4
+                                               10l6.5-6.5L12 5z" />
+                                    </svg>
+                                </span>
+                                <span class="Toast-content">
+                                    Die Prüfung wurde erfolgreich angelegt.
+                                </span>
+                                <button id="dismiss" class="Toast-dismissButton">
+                                    <svg width="12"
+                                         height="16"
+                                         viewBox="0 0 12 16"
+                                         class="octicon octicon-x"
+                                         aria-hidden="true">
+                                        <path fill-rule="evenodd"
+                                              d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75
+                                             3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6
+                                             6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+
                             {% block body %}{% endblock %}
                         </div>
                     </div>
