--- a/templates/_pupil.html.twig
+++ b/templates/_pupil.html.twig
@@ -9,7 +9,7 @@
             <i class="cil cil-group SideNav-icon"></i>
             Alle Prüflinge
         </a>
-        <a href="{{ url('app_pupil_crud_export_pdf') }}" class="SideNav-item">
+        <a href="{{ url('app_pupil_crud_export_pdf',{'id':pupil.id}) }}" class="SideNav-item">
             <i class="cil cil-cloud-download SideNav-icon"></i>
             Datenblatt exportieren
         </a>
